--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Nutrino</string>
-    <string name="Spoonacular_API_KEY"></string>
+    <string name="Spoonacular_API_KEY">2b2269f8a745489ca856701dad646637 </string>
 </resources>
