--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
+    <string name="Spoonacular_API_KEY"></string>
     <string name="app_name">Nutrino</string>
-    <string name="Spoonacular_API_KEY">2b2269f8a745489ca856701dad646637 </string>
+    <string name="intoleranceString">dairy,egg,gluten,grain,peanut,seafood,sesame,shellfish,soy,sulfite,tree nut,wheat</string>
+    <string name="ingredientsTVString">Ingredients</string>
+    <string name="instructionTVString">Instructions</string>
 </resources>
