Clear cart button functionality added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="intoleranceString">dairy,egg,gluten,grain,peanut,seafood,sesame,shellfish,soy,sulfite,tree nut,wheat</string>
     <string name="ingredientsTVString">Ingredients</string>
     <string name="instructionTVString">Instructions</string>
+    <string name="clear_cart">Clear Cart</string>
 </resources>
